--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,11 +23,12 @@
         formControlName="password">
         <mat-error align="end" *ngIf="loginForm.controls.password.hasError('required')">Field must not be empty</mat-error>
     </mat-form-field>
-    <button 
+    <button *ngIf="!isLoading"
     type="submit" 
     mat-raised-button 
     color="primary"
     [disabled]="loginForm.invalid"
     >Submit</button>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
