--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -43,10 +43,11 @@
         name="agree"
         required
         color="primary">Agree to terms and conditions</mat-checkbox>  
-    <button 
+    <button *ngIf="!isLoading"
       type="submit" 
       mat-raised-button 
       color="primary"
       [disabled]="f.invalid">Submit</button>
+      <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
