--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -3,19 +3,19 @@
       <mat-icon>home</mat-icon>
       <span class="nav-icons">Home</span>
   </a>
-  <a *ngIf="!isAuth" mat-list-item [routerLink]="['/signup']" (click)="onSidenavClose()">
+  <a *ngIf="!(isAuth$ | async)" mat-list-item [routerLink]="['/signup']" (click)="onSidenavClose()">
       <mat-icon>face</mat-icon>
       <span class="nav-icons">Signup</span>
   </a>
-  <a *ngIf="!isAuth" mat-list-item [routerLink]="['/login']" (click)="onSidenavClose()">
+  <a *ngIf="!(isAuth$ | async)" mat-list-item [routerLink]="['/login']" (click)="onSidenavClose()">
       <mat-icon>how_to_reg</mat-icon>
       <span class="nav-icons">Login</span>
   </a>
-  <a *ngIf="isAuth" mat-list-item [routerLink]="['/training']" (click)="onSidenavClose()">
+  <a *ngIf="isAuth$ | async" mat-list-item [routerLink]="['/training']" (click)="onSidenavClose()">
       <mat-icon>fitness_center</mat-icon>
       <span class="nav-icons">Training</span>
   </a>
-  <mat-list-item *ngIf="isAuth">
+  <mat-list-item *ngIf="isAuth$ | async">
       <button mat-icon-button (click)="onLogout()">
           <mat-icon>eject</mat-icon>
           <span class="nav-icons">Log out</span>
