--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,18 +3,18 @@
     <mat-card fxFlex.xs="100%" fxFlex="400px">
         <mat-card-title fxLayoutAlign="center">Time to start a workout!</mat-card-title>
         <mat-card-content fxLayoutAlign="center">
-            <mat-form-field *ngIf="!isLoadingExercises && exercises">
+            <mat-form-field *ngIf="!(isLoading$ | async) && exercises$ | async">
                 <mat-select placeholder="Exercises" ngModel name="exercise" required>
-                  <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+                  <mat-option *ngFor="let exercise of exercises$ | async" [value]="exercise.id">
                     {{ exercise.name }}
                   </mat-option>
                 </mat-select>
             </mat-form-field>
-            <mat-spinner *ngIf="isLoadingExercises"></mat-spinner>
+            <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
         </mat-card-content>
-            <mat-card-actions *ngIf="!isLoadingExercises" fxLayoutAlign="center">
-                <button *ngIf="exercises" type="submit" mat-button [disabled]="f.invalid">Start</button>
-                <button *ngIf="!exercises" type="button" mat-button (click)="fetchExercises()">Fetch Again</button>
+            <mat-card-actions *ngIf="!(isLoading$ | async)" fxLayoutAlign="center">
+                <button *ngIf="exercises$ | async" type="submit" mat-button [disabled]="f.invalid">Start</button>
+                <button *ngIf="!(exercises$ | async)" type="button" mat-button (click)="fetchExercises()">Fetch Again</button>
             </mat-card-actions>
     </mat-card>      
     </form>
