--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -34,6 +34,6 @@
 </mat-table>
 
 <mat-paginator
- [pageSize]="5"
- [pageSizeOptions]="[5, 10, 25, 100]">
+ [pageSize]="10"
+ [pageSizeOptions]="[10, 25, 100]">
 </mat-paginator>
