--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,3 +1,30 @@
 .welcome {
+    display: flex;
+    justify-content: space-around;
+}
+
+#bg {
+    z-index: 1;
+    opacity: 0.6;
+    position: absolute;
+    max-height: 100%;
+    min-width: 100%;
+}
+
+#text {
+    color: rgb(32, 33, 46);
+    font-size: 20px;
+    font-weight: bold;
     text-align: center;
+    position: absolute;
+    z-index: 2;
+    padding: 30px;
+    margin: auto;
+    background-color: rgba(245, 245, 245, 0.6);
+}
+
+@media (max-width: 600px) {
+    #text {
+        font-size: 16px;
+    }
 }
