--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,19 +1,7 @@
 <div
- class="welcome" 
- fxLayout="column"
- fxLayout.gt-md="row" 
- fxLayoutGap.gt-md="20px" 
- fxLayoutAlign="center center">
-    <section>
-      <h1>ACTIVITY</h1>
-      <p>Stay active and enjoy better health and more fun!</p>
-    </section>
-    <section>
-      <h1>COMMUNITY</h1>
-      <p>Get to know other people who share your passion!</p>
-    </section>
-    <section>
-      <h1>CHALLENGES</h1>
-      <p>Never stop! Dive into new challenges every day</p>
-    </section>
-  </div>
+ class="welcome">
+      <img id="bg" src="../../assets/bg.jpg" alt="">
+      <div id="text">
+        <h1>Challenge yourself, create better habbits, become a better version of yourself!</h1>
+      </div>
+</div>
